--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,9 @@
   },
   "homepage": "https://github.com/syncrosse/client#readme",
   "devDependencies": {
-    "typescript": "^4.3.5"
+    "prettier": "^2.3.2",
+    "typescript": "^4.3.5",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0"
   }
 }
