--- a/package.json
+++ b/package.json
@@ -1,27 +1,35 @@
 {
   "name": "@syncrosse/client",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Easy networking for games",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc"
+    "test": "jest --config jestconfig.json",
+    "build": "tsc",
+    "prepare" : "npm run build",
+    "prepublishOnly" : "npm test",
+    "postversion" : "git push && git push --tags"
   },
+  "files": [
+    "lib/**/*"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/syncrosse/client.git"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["multiplayer", "sync", "websockets", "game", "online"],
+  "author": "devonpmack",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/syncrosse/client/issues"
   },
   "homepage": "https://github.com/syncrosse/client#readme",
   "devDependencies": {
+    "@types/jest": "^26.0.24",
+    "jest": "^27.0.6",
     "prettier": "^2.3.2",
-    "typescript": "^4.3.5",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0"
+    "ts-jest": "^27.0.4",
+    "typescript": "^4.3.5"
   }
 }
