--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@syncrosse/client",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Easy networking for games",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -10,9 +10,9 @@
   "scripts": {
     "test": "jest --config jestconfig.json",
     "build": "tsc",
-    "prepare" : "npm run build",
-    "prepublishOnly" : "npm test",
-    "postversion" : "git push && git push --tags"
+    "prepare": "npm run build",
+    "prepublishOnly": "npm test",
+    "postversion": "git push && git push --tags"
   },
   "files": [
     "lib/**/*"
@@ -21,7 +21,13 @@
     "type": "git",
     "url": "git+https://github.com/syncrosse/client.git"
   },
-  "keywords": ["multiplayer", "sync", "websockets", "game", "online"],
+  "keywords": [
+    "multiplayer",
+    "sync",
+    "websockets",
+    "game",
+    "online"
+  ],
   "author": "devonpmack",
   "license": "ISC",
   "bugs": {
@@ -34,5 +40,8 @@
     "prettier": "^2.3.2",
     "ts-jest": "^27.0.4",
     "typescript": "^4.3.5"
+  },
+  "dependencies": {
+    "socket.io-client": "^4.1.3"
   }
 }
