--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@syncrosse/client",
-  "version": "1.0.1",
+  "version": "1.0.4",
   "description": "Easy networking for games",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -42,6 +42,8 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
+    "@types/react": "^17.0.16",
+    "react": "^17.0.2",
     "socket.io-client": "^4.1.3"
   }
 }
