--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@syncrosse/client",
   "version": "1.1.0",
-  "description": "Easy networking for games",
+  "description": "An easy library for creating a server with websockets",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "publishConfig": {
